--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dev = [
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-pythonpath = ["src"]
+pythonpath = ["traenslenzor"]
 addopts = "-q"
 
 [tool.ruff]
@@ -36,8 +36,8 @@ warn_return_any = true
 check_untyped_defs = true
 no_implicit_optional = true
 pretty = true
-mypy_path = ["src"]
-files = ["src", "tests"]
+mypy_path = ["traenslenzor"]
+files = ["traenslenzor", "tests"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101"]
