--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastmcp>=2.12.4",
+    "langchain>=1.0.0",
+    "langchain-ollama>=1.0.0",
+    "langgraph>=1.0.0",
 ]
 
 [dependency-groups]
