--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastmcp>=2.12.4",
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.4",
+    "pillow>=12.0.0",
+    "torch>=2.9.0",
+    "torchvision>=0.24.0",
 ]
 
 [dependency-groups]
@@ -27,6 +32,10 @@ target-version = "py313"
 
 [tool.ruff.lint]
 extend-select = ["I"]  # import sorting
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
+split-on-trailing-comma = true
 
 [tool.mypy]
 python_version = "3.13"
