Add ImageProvider and modular inpainting backends
Introduce ImageProvider for image I/O and conversion. Add Inpainter
(LaMa) with auto-download and an ONNX backend. Refactor ImageRenderer to
use ImageProvider and Inpainter; add text masking, drawing and
replace_text workflow. Update tests to use ImageProvider. Add
onnxruntime dependency and ignore lama model directory in .gitignore.
Remove old mask utility.

--- a/.gitignore
+++ b/.gitignore
@@ -219,7 +219,7 @@ __marimo__/
 
 data/
 
-traenslenzor/image_renderer/lama/big-lama.pt
+traenslenzor/image_renderer/lama/*
 
 main.pdf
 *update.pdf
