--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastmcp>=2.12.4",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
+    "onnxruntime>=1.23.2",
     "pillow>=12.0.0",
     "torch>=2.9.0",
     "torchvision>=0.24.0",
