--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,5 +69,9 @@ pretty = true
 mypy_path = ["traenslenzor"]
 files = ["traenslenzor", "tests"]
 
+[[tool.mypy.overrides]]
+module = ["onnxruntime.*", "onnx.*"]
+ignore_missing_imports = true
+
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101"]
