--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiofiles>=23.2.1",
+    "fastapi>=0.120.4",
     "fastmcp>=2.12.4",
+    "httpx>=0.27.0",
     "langchain>=1.0.0",
+    "langchain-mcp-adapters>=0.1.12",
     "langchain-ollama>=1.0.0",
     "langgraph>=1.0.0",
+    "types-aiofiles>=25.1.0.20251011",
+    "uvicorn>=0.37.0",
 ]
 
 [dependency-groups]
@@ -49,6 +55,10 @@ no_implicit_optional = true
 pretty = true
 mypy_path = ["traenslenzor"]
 files = ["traenslenzor", "tests"]
+
+[[tool.mypy.overrides]]
+module = "langchain_mcp_adapters.*"
+ignore_missing_imports = true
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101"]
