--- a/.gitignore
+++ b/.gitignore
@@ -201,7 +201,7 @@ cython_debug/
 #   you could uncomment the following to ignore the entire vscode folder
 # .vscode/
 
-.zed/
+#.zed/
 
 # Ruff stuff:
 .ruff_cache/
@@ -229,3 +229,4 @@ main.pdf
 *update.pdf
 .DS_Store
 trash.txt
+debug/
