--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "langchain>=1.0.0",
     "langchain-mcp-adapters>=0.1.12",
     "langchain-ollama>=1.0.0",
+    "langchain-text-splitters>=1.0.0",
     "langgraph>=1.0.0",
+    "paddleocr>=3.3.1",
+    "paddlepaddle>=3.2.1",
     "types-aiofiles>=25.1.0.20251011",
     "uvicorn>=0.37.0",
 ]
