--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "langchain-ollama>=1.0.0",
     "langchain-text-splitters>=1.0.0",
     "langgraph>=1.0.0",
+    "numpy>=2.3.4",
+    "opencv-python>=4.11.0.86",
     "paddleocr>=3.3.1",
     "paddlepaddle>=3.2.1",
     "types-aiofiles>=25.1.0.20251011",
@@ -56,7 +58,6 @@ warn_return_any = true
 check_untyped_defs = true
 no_implicit_optional = true
 pretty = true
-mypy_path = ["traenslenzor"]
 files = ["traenslenzor", "tests"]
 
 [[tool.mypy.overrides]]
