chore: update dependencies, docs, and development tools
Dependencies:
- Update uv.lock with new package versions
  * jaxtyping>=0.3.3 for tensor shape annotations
  * albumentations for image augmentation
  * Updated PyTorch Lightning and related packages

Documentation:
- Add comprehensive copilot-instructions.md
  * Project architecture and design patterns
  * Config-as-Factory pattern documentation
  * Style guide for typing, docstrings, and code organization
  * Context7 library IDs for documentation lookup
- Update README.md with doc_classifier overview

Development tools:
- Add verify_todo_resolution.py for validating TODO completion
- Add example notebooks for dataset exploration and config visualization
  * doc_classifier_01.ipynb: training pipeline examples
  * puml_config_example.ipynb: PlantUML config visualization
  * rvl_cdip_dataset_overview.ipynb: dataset exploration

Gitignore:
- Add .data/ and .configs/ to .gitignore
  * .data/ stores local dataset cache
  * .configs/ stores config snapshots and diagrams

--- a/.gitignore
+++ b/.gitignore
@@ -218,6 +218,10 @@ __marimo__/
 # translenzor
 .supervisor_graph.png
 
+# doc_classifier artifacts and cache
+.data/
+.configs/
+
 # docs
 main.pdf
 *update.pdf
