--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ addopts    = "-q"
 [tool.ruff]
 line-length    = 100
 target-version = "py313"
+extend-exclude = ["verify_todo_resolution.py", "test_transform_integration.py"]
 
     [tool.ruff.lint]
     extend-select = ["I"] # import sorting
