docs(config): add README for configuration directory
Explain how to create, edit, and load TOML/PlantUML configs.
Includes key configuration sections and usage examples.

Update .gitignore to track .configs/README.md while ignoring
generated .toml and .puml files.

--- a/.gitignore
+++ b/.gitignore
@@ -219,8 +219,10 @@ __marimo__/
 .supervisor_graph.png
 
 # doc_classifier artifacts and cache
+# trÄnslenzor specific
 .data/
-.configs/
+.configs/*.toml
+.configs/*.puml
 
 # docs
 main.pdf
