feat: add Pydantic CLI tool and suppress pin_memory deprecation warnings
- Add run.py with Pydantic-based CLI using cli_parse_args=True
- Support YAML config files and CLI argument overrides with dot notation
- Add comprehensive CLI usage documentation to README.md
- Suppress PyTorch 2.9+ pin_memory(device=...) deprecation warnings
- Add pytest filterwarnings configuration for cleaner test output
- Fix test mock to include verbose/is_debug attributes
- Update .gitignore to exclude .logs/ directory

All 82 tests passing with minimal warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ classifier = [
     "optuna>=4.2.0",
     "optuna-integration[pytorch-lightning]>=4.5.0",
     "pydantic>=2.12.4",
+    "pydantic-settings>=2.11.0",
     # "pytorch-lightning>=2.5.6",
     "lightning>=2.5.6",
     "rich>=13.9.4",
@@ -70,6 +71,11 @@ exclude = ["notebooks*"]
 testpaths  = ["tests"]
 pythonpath = ["traenslenzor"]
 addopts    = "-q"
+filterwarnings = [
+    # Suppress PyTorch's internal pin_memory deprecation warning (PyTorch 2.9+)
+    # This warning comes from DataLoader's internal implementation, not our code
+    "ignore:The argument 'device' of Tensor.(pin_memory|is_pinned).*:DeprecationWarning",
+]
 
 [tool.ruff]
 line-length    = 100
