test: suppress PyTorch pin_memory deprecation warnings in pytest config
Add filterwarnings to pyproject.toml to ignore the internal PyTorch
deprecation warning for Tensor.pin_memory(device=...) and
Tensor.is_pinned(device=...). This warning comes from PyTorch's
internal DataLoader implementation, not our code. Our usage of
pin_memory=True is correct and follows the non-deprecated API.

The warning will be fixed in future PyTorch releases.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,9 +72,7 @@ testpaths  = ["tests"]
 pythonpath = ["traenslenzor"]
 addopts    = "-q"
 filterwarnings = [
-    # Suppress PyTorch's internal pin_memory deprecation warning (PyTorch 2.9+)
-    # This warning comes from DataLoader's internal implementation, not our code
-    "ignore:The argument 'device' of Tensor.(pin_memory|is_pinned).*:DeprecationWarning",
+    "ignore:The argument 'device' of Tensor\\.(pin_memory|is_pinned)\\(\\) is deprecated:DeprecationWarning",
 ]
 
 [tool.ruff]
