feat: add RichProgressBar and TQDMProgressBar as mutually exclusive options
- Add RichProgressBar configuration (enabled by default)
- Add TQDMProgressBar configuration as alternative
- Add model_validator to ensure mutual exclusivity
- Configure both with 'leave' parameter (default: False)
- TQDM includes configurable refresh_rate (default: 1)
- RichProgressBar provides enhanced terminal formatting consistent with our Console logging

Default configuration uses RichProgressBar for better visual consistency
with the rest of the project's rich-based output.

All 82 tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -219,11 +219,9 @@ __marimo__/
 .supervisor_graph.png
 
 # doc_classifier artifacts and cache
-# trÄnslenzor specific
 .data/
 .logs/
-.configs/*.toml
-.configs/*.puml
+.configs/
 
 # docs
 main.pdf
