test: remove obsolete singleton test and add PyTorch warning comment
- Remove test_singleton_update_and_copy (obsolete after Console.warn → log)
- Remove unused 'copy' import from test_base_config.py
- Add inline comment explaining PyTorch internal deprecation warning filter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ testpaths = ["tests"]
 pythonpath = ["traenslenzor"]
 addopts = "-q"
 filterwarnings = [
-    "ignore:The argument 'device' of Tensor\\.(pin_memory|is_pinned)\\(\\) is deprecated:DeprecationWarning",
+    "ignore:The argument 'device' of Tensor\\.(pin_memory|is_pinned)\\(\\) is deprecated:DeprecationWarning", # PyTorch interal warning
 ]
 
 [tool.ruff]
