feat: add font-detector dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,10 +28,11 @@ dependencies = [
     "langchain-ollama>=1.0.0",
     "langchain-text-splitters>=1.0.0",
     "langgraph>=1.0.0",
-    "numpy>=2.3.4",
     "opencv-python>=4.11.0.86",
     "paddleocr>=3.3.1",
     "paddlepaddle>=3.2.1; sys_platform == 'darwin' or sys_platform == 'win32'",
+    "requests>=2.31.0",
+    "transformers>=4.30.0",
     "types-aiofiles>=25.1.0.20251011",
     "uvicorn>=0.37.0",
     "streamlit>=1.52.1",
