Refactor ImageRenderer to use text_operations
Move mask/drawing logic to image_renderer.text_operations. Change
ImageRenderer.replace_text to accept a PIL Image (no longer loads via
FileClient). Make inverse_transformation optional. Update tests to use
sample PIL images and call create_mask/ draw_texts where appropriate.
Start image_renderer server on app run, register it in MCP servers, and
add zed tasks for lint/test and running the app. Add a small comment to
onnx_inpainting for testing purposes.

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -7,6 +7,14 @@
     "command": "uv run pytest -vs -o log_cli=true -o log_cli_level=\"INFO\""
   },
   {
+    "label": "Lint & Test types",
+    "command": "uv run ruff check . && uv run mypy"
+  },
+  {
+    "label": "Run App",
+    "command": "uv run python -m traenslenzor"
+  },
+  {
     "label": "Test CI",
     "command": "CI=true uv run pytest -vs -o log_cli=true -o log_cli_level=\"INFO\""
   },
