--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Module",
+            "name": "Traenslenzor",
             "type": "debugpy",
             "request": "launch",
             "justMyCode": false, 
-            "module": "traenslenzor.supervisor.supervisor"
+            "module": "traenslenzor"
         }
     ]
 }
