--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "numpy>=2.3.4",
     "opencv-python>=4.11.0.86",
     "paddleocr>=3.3.1",
-    "paddlepaddle>=3.2.1",
+    "paddlepaddle>=3.2.1; sys_platform == 'darwin' or sys_platform == 'win32'",
     "types-aiofiles>=25.1.0.20251011",
     "uvicorn>=0.37.0",
 ]
