--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,15 +27,17 @@ dependencies = [
     "langchain-ollama>=1.0.0",
     "langchain-text-splitters>=1.0.0",
     "langgraph>=1.0.0",
-    "numpy>=2.3.4",
+    "numpy>=1.26.4,<2.3.0",
     "opencv-python>=4.11.0.86",
     "paddleocr>=3.3.1",
     "paddlepaddle>=3.2.1; sys_platform == 'darwin' or sys_platform == 'win32'",
     "types-aiofiles>=25.1.0.20251011",
     "uvicorn>=0.37.0",
+    "seaborn>=0.13.2",
 ]
 
 [dependency-groups]
+
 dev = [
     "pandas-stubs>=2.3.2.250926",
     "pre-commit>=4.3.0",
@@ -55,8 +57,6 @@ classifier = [
     "tomlkit>=0.13.3",
     "datasets>=4.4.1",                              # https://huggingface.co/datasets
     "devtools>=0.12.2",
-    "numpy>=2.0.0",
-    "opencv-python>=4.12.0.88",
     "optuna>=4.2.0",
     "optuna-integration[pytorch-lightning]>=4.5.0",
     "pydantic>=2.12.4",
@@ -68,16 +68,19 @@ classifier = [
     "torchvision>=0.24.0",
     "torchmetrics>=1.6.0",
     "torchsummary>=1.5.1",
+    "captum>=0.8.0",
     "wandb>=0.22.3",
+    "seaborn>=0.13.2",
     "jaxtyping>=0.3.3",
     "typing-extensions>=4.15.0",
+    "syrenka>=0.5.7",
 ]
 notebook = [
-    "ipympl>=0.9.0",      # %matplotlib widget
+    "ipympl>=0.9.0",     # %matplotlib widget
     "jupyter>=1.0.0",
     "ipykernel>=7.1.0",
     "notebook>=7.0.0",
-    "jupyterlab>=4.4.10",
+    "jupyterlab>=4.5.0",
 ]
 
 [tool.pytest.ini_options]
@@ -94,7 +97,8 @@ target-version = "py313"
 extend-exclude = ["verify_todo_resolution.py", "test_transform_integration.py"]
 
     [tool.ruff.lint]
-    extend-select = ["I"] # import sorting
+    extend-select = ["I"]    # import sorting
+    ignore        = ["F722"] # allow jaxtyping
 
 [tool.mypy]
 python_version       = "3.13"
