--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "aiofiles>=23.2.1",
     "fastapi>=0.120.4",
     "fastmcp>=2.12.4",
+    "mcp>=1.0.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "onnxruntime>=1.23.2",
@@ -38,6 +39,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "ipykernel>=7.1.0",
     "pandas-stubs>=2.3.2.250926",
     "pre-commit>=4.3.0",
     "pytest>=8.4.2",
