--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "paddlepaddle>=3.2.1; sys_platform == 'darwin' or sys_platform == 'win32'",
     "types-aiofiles>=25.1.0.20251011",
     "uvicorn>=0.37.0",
+    "ollama>=0.6.0",
 ]
 
 [dependency-groups]
