--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 traenslenzor/font_detector/checkpoints/**/*.json filter=lfs diff=lfs merge=lfs -text
+traenslenzor/font_detector/checkpoints/**/*.csv filter=lfs diff=lfs merge=lfs -text
 traenslenzor/font_detector/data/**/*.csv filter=lfs diff=lfs merge=lfs -text
 
 # Fonts
