--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "langgraph>=1.0.0",
     "opencv-python>=4.11.0.86",
     "paddleocr>=3.3.1",
-    "paddlepaddle>=3.2.1; sys_platform == 'darwin' or sys_platform == 'win32'",
+    "paddlepaddle>=3.2.1",
     "requests>=2.31.0",
     "transformers>=4.30.0",
     "types-aiofiles>=25.1.0.20251011",
