--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,25 +37,7 @@ dependencies = [
     "uvicorn>=0.37.0",
     "streamlit>=1.52.1",
     "seaborn>=0.13.2",
-]
-
-[dependency-groups]
-
-dev = [
-    "pandas-stubs>=2.3.2.250926",
-    "pre-commit>=4.3.0",
-    "pytest>=8.4.2",
-    "pytest-image-diff>=0.0.14",
-    "ruff>=0.14.1",
-    "types-defusedxml>=0.7.0.20250822",
-    "types-pexpect>=4.9.0.20250916",
-    "types-psutil>=7.0.0.20251001",
-    "types-pygments>=2.19.0.20250809",
-    "types-pysocks>=1.7.1.20251001",
-    "types-pyyaml>=6.0.12.20250915",
-    "types-requests>=2.32.4.20250913",
-]
-classifier = [
+    # Classifier
     "albumentations>=2.0.8",
     "tomlkit>=0.13.3",
     "datasets>=4.4.1",                              # https://huggingface.co/datasets
@@ -77,6 +59,23 @@ classifier = [
     "jaxtyping>=0.3.3",
     "typing-extensions>=4.15.0",
     "syrenka>=0.5.7",
+]
+
+[dependency-groups]
+
+dev = [
+    "pandas-stubs>=2.3.2.250926",
+    "pre-commit>=4.3.0",
+    "pytest>=8.4.2",
+    "pytest-image-diff>=0.0.14",
+    "ruff>=0.14.1",
+    "types-defusedxml>=0.7.0.20250822",
+    "types-pexpect>=4.9.0.20250916",
+    "types-psutil>=7.0.0.20251001",
+    "types-pygments>=2.19.0.20250809",
+    "types-pysocks>=1.7.1.20251001",
+    "types-pyyaml>=6.0.12.20250915",
+    "types-requests>=2.32.4.20250913",
 ]
 notebook = [
     "ipympl>=0.9.0",     # %matplotlib widget
