fix: email format

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* benedikt.koehler@peerigon.com janphilip.schaible@gmail.com felix.schladt@gmail.com duchsche@hm.edu janduchscher@gmail.com lukas.roess@gmail.com
+* <benedikt.koehler@peerigon.com> <janphilip.schaible@gmail.com> <felix.schladt@gmail.com> <duchsche@hm.edu> <janduchscher@gmail.com> <lukas.roess@gmail.com>
