--- a/.gitattributes
+++ b/.gitattributes
@@ -2,12 +2,10 @@
 .logs/checkpoints/alexnet-epoch=9-val-loss=0.67.ckpt filter=lfs diff=lfs merge=lfs -text
 .logs/checkpoints/resnet50-epoch=5-val_loss=0.52.ckpt filter=lfs diff=lfs merge=lfs -text
 .logs/checkpoints/vit_b_16-epoch=7-val_loss=0.83.ckpt filter=lfs diff=lfs merge=lfs -text
-
 # Font Detector Checkpoints and Data
 traenslenzor/font_detector/checkpoints/**/*.json filter=lfs diff=lfs merge=lfs -text
 traenslenzor/font_detector/checkpoints/**/*.csv filter=lfs diff=lfs merge=lfs -text
 traenslenzor/font_detector/data/**/*.csv filter=lfs diff=lfs merge=lfs -text
-
 # Fonts
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.otf filter=lfs diff=lfs merge=lfs -text
@@ -21,3 +19,4 @@ traenslenzor/font_detector/data/**/*.csv filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+.logs/checkpoints/*.ckpt filter=lfs diff=lfs merge=lfs -text
