feat: update codeowner part regarding changes on core

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @FelixSchladt @JanDuchscherer104 @janschaible @benekoehler @luroess
+traenslenzor/* @FelixSchladt @JanDuchscherer104 @janschaible @benekoehler @luroess
