--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ dependencies = [
     "typing-extensions>=4.15.0",
     "syrenka>=0.5.7",
     "watchdog>=6.0.0",
+    "py-reform>=0.1.0",
 ]
 
 [dependency-groups]
