--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,10 @@ notebook = [
 testpaths  = ["tests"]
 pythonpath = ["traenslenzor"]
 addopts    = "-q"
+markers = [
+    "supervisor_integration: expensive tests requiring LLM API and all MCP servers",
+    "anyio: mark test as async",
+]
 
 [tool.ruff]
 line-length    = 100
