--- a/.configs/doc-scanner.toml
+++ b/.configs/doc-scanner.toml
@@ -3,5 +3,5 @@ is_debug                = false
 device                  = "auto"
 crop_page               = true
 generate_map_xy         = true
-superres_device         = "cuda"
+superres_device         = "CPU"
 superres_allow_download = true
