--- a/.configs/resnet50_finetune.toml
+++ b/.configs/resnet50_finetune.toml
@@ -16,21 +16,21 @@ use_wandb         = true
 gradient_clip_val = 1.0
 
     [trainer_config.callbacks]
-    use_model_checkpoint    = true
-    checkpoint_save_top_k   = 1
-    use_early_stopping      = true
-    early_stopping_patience = 3
-    use_lr_monitor          = true
-    use_rich_progress_bar   = false
-    use_tqdm_progress_bar   = true
-    tqdm_refresh_rate       = 10
-    use_rich_model_summary  = true
-    rich_summary_max_depth  = 1
+    use_model_checkpoint       = true
+    checkpoint_save_top_k      = 1
+    use_early_stopping         = true
+    early_stopping_patience    = 3
+    use_lr_monitor             = true
+    use_rich_progress_bar      = false
+    use_tqdm_progress_bar      = true
+    tqdm_refresh_rate          = 10
+    use_rich_model_summary     = true
+    rich_summary_max_depth     = 1
     use_backbone_finetuning    = true
     backbone_unfreeze_at_epoch = 2
-    backbone_train_bn        = true
-    use_train_heavy_switch   = true
-    train_heavy_switch_epoch = 8
+    backbone_train_bn          = true
+    use_train_heavy_switch     = true
+    train_heavy_switch_epoch   = 8
 
     [trainer_config.wandb_config]
     project = "doc-class-detector"
@@ -40,7 +40,7 @@ gradient_clip_val = 1.0
 [module_config]
 backbone        = "resnet50"
 train_head_only = true
-use_pretrained  = true      # Use ImageNet pretrained weights
+use_pretrained  = true       # Use ImageNet pretrained weights
 
     [module_config.optimizer]
     learning_rate     = 5.13e-4 # smaller base LR for pretrained backbone
@@ -66,21 +66,21 @@ verbose            = true
     split = "train"
 
         [datamodule_config.train_ds.transform_config]
-        transform_type = "finetune_plus"
-        img_size       = 224
-        convert_to_rgb = true            # keep 3-channel input for pretrained ResNet
-        normalization_mode = "imagenet"
+        transform_type     = "finetune_plus"
+        img_size           = 224
+        convert_to_rgb     = true            # keep 3-channel input for pretrained ResNet
+        normalization_mode = "dataset"
 
     [datamodule_config.val_ds]
         [datamodule_config.val_ds.transform_config]
-        transform_type       = "val"
-        img_size             = 224
-        convert_to_rgb       = true
-        normalization_mode   = "imagenet"
+        transform_type     = "val"
+        img_size           = 224
+        convert_to_rgb     = true
+        normalization_mode = "dataset"
 
     [datamodule_config.test_ds]
         [datamodule_config.test_ds.transform_config]
-        transform_type       = "val"
-        img_size             = 224
-        convert_to_rgb       = true
-        normalization_mode   = "imagenet"
+        transform_type     = "val"
+        img_size           = 224
+        convert_to_rgb     = true
+        normalization_mode = "dataset"
