--- a/.configs/alexnet_scratch.toml
+++ b/.configs/alexnet_scratch.toml
@@ -9,7 +9,6 @@ is_debug     = false
 fast_dev_run = false
 accelerator  = "auto"
 strategy     = "auto"
-# Continue training beyond the previous 8 epochs
 max_epochs        = 16
 precision         = "32-true"
 log_every_n_steps = 20
@@ -43,8 +42,8 @@ backbone = "alexnet" # BackboneType.ALEXNET
 # dropout     = 0.22 # No dropout for scratch training
 
     [module_config.optimizer]
-    learning_rate = 3.27e-4 # sqrt-scaled from 3.27e-4 for batch_size=128
-    weight_decay  = 0.00046 # Standard L2 regularization
+    learning_rate = 3.27e-4 
+    weight_decay  = 0.00046 
 
     [module_config.scheduler]
     # NOTE: original OneCycle config for the first 8 epochs (kept for reference)
